--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
     "manifest_version": 2,
     "name": "SEO OnPage Checker",
-    "version": "1.0",
+    "version": "1.3",
     "description": "SEO OnPage checker",
+    "short_name":"SEO OnPage checker",
     "icons":{
         "16": "images/icon16.png",
         "128": "images/icon128.png",
