--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
     "manifest_version": 2,
-    "name": "SEO OnPage Checker",
+    "name": "__MSG_name__",
     "version": "1.3",
-    "description": "SEO OnPage checker",
+    "description": "__MSG_description__",
     "short_name":"SEO OnPage checker",
+    "default_locale":"en",
     "icons":{
         "16": "images/icon16.png",
         "128": "images/icon128.png",
