--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "__MSG_name__",
     "version": "1.3",
     "description": "__MSG_description__",
-    "short_name": "__MSG_shortDescription__",
+    "short_name": "SEO OnPage Checker",
     "default_locale": "en",
     "icons":{
         "16": "images/icon16.png",
