--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
     "name": "__MSG_name__",
-    "version": "1.6.1",
+    "version": "1.7.0",
     "description": "__MSG_description__",
-    "short_name": "SEO OnPage Checker",
+    "short_name": "Netpeak Agency SEO Tool",
     "default_locale": "en",
     "icons":{
         "16": "images/icon16.png",
